made download functions in wrds_utils, wrds_compa

--- a/settings.ini
+++ b/settings.ini
@@ -39,6 +39,6 @@ status = 3
 user = ionmihai
 
 ### Optional ###
-requirements = fastcore pandas numpy wrds
+requirements = fastcore pandas numpy wrds>=3.1.6 estout pandasmore
 # dev_requirements = 
 # console_scripts =
