--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,4 +4,10 @@ on:  [workflow_dispatch, pull_request, push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps: [uses: fastai/workflows/nbdev-ci@master]
+    steps: 
+      - uses: fastai/workflows/nbdev-ci@master
+        env:
+          FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
+          WRDS_USERNAME: ${{ secrets.WRDS_USERNAME }} 
+    			
+    		
