--- a/settings.ini
+++ b/settings.ini
@@ -1,44 +1,37 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = finsets
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = finsets
+version = 0.0.2
 min_python = 3.7
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = finsets
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = True
 custom_quarto_yml = True
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://ionmihai.github.io
+doc_baseurl = /finsets
+git_url = https://github.com/ionmihai/finsets
+title = finsets
 audience = Developers
 author = Mihai Ion
 author_email = mihaiion@email.arizona.edu
-copyright = 2023 onwards, %(author)s
+copyright = 2023 onwards, Mihai Ion
 description = Download and process datasets commonly used in finance research
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = ionmihai
-
-### Optional ###
 requirements = fastcore pandas numpy psycopg2-binary sqlalchemy<2 estout pandasmore
-# dev_requirements = 
-# console_scripts =
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
+
