added search function to core module

--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = ionmihai
-requirements = fastcore pandas numpy psycopg2-binary sqlalchemy<2 estout pandasmore
+requirements = fastcore pandas numpy psycopg2-binary sqlalchemy<2 estout pandasmore thefuzz python-levenstein
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
