added metadata, storage, and dataloader modules. changed wrds_api.Connection to look for wrds_username env automatically

--- a/nbs/_quarto.yml
+++ b/nbs/_quarto.yml
@@ -23,8 +23,12 @@ website:
     contents:
       - text: "Getting Started"
         href: index.ipynb
-      - text: "Core functions"
-        href: 00_core.ipynb
+      - text: "Metadata"
+        href: 00_metadata.ipynb
+      - text: "Storage"
+        href: 01_storage.ipynb
+      - text: "Dataloader"
+        href: 02_dataloader.ipynb
       - section: FRED
         contents: 00_fred/*
       - section: WRDS
