--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = ionmihai
-requirements = fastcore pandas scipy numpy requests psycopg2-binary sqlalchemy<2 estout pandasmore thefuzz python-Levenshtein
+requirements = fastcore pandas scipy numpy requests psycopg2-binary sqlalchemy<2 estout pandasmore thefuzz python-Levenshtein networkx pygraphviz
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
