--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = finsets
 lib_name = finsets
-version = 0.0.4
+version = 0.0.5
 min_python = 3.7
 license = apache2
 black_formatting = False
@@ -35,4 +35,7 @@ jupyter_hooks = True
 clean_ids = True
 clear_all = False
 console_scripts = finsets_search=finsets:search
+cell_number = True
+update_pyproject = True
+skip_procs = 
 
