switched back to wrds (#2)
* bump

* switched to using official wrds package

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = finsets
 lib_name = finsets
-version = 0.0.4
+version = 0.0.6
 min_python = 3.7
 license = apache2
 black_formatting = False
@@ -27,7 +27,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = ionmihai
-requirements = fastcore pandas scipy numpy requests psycopg2-binary sqlalchemy<2 estout pandasmore thefuzz python-Levenshtein
+requirements = fastcore pandas scipy numpy requests psycopg2-binary wrds estout pandasmore thefuzz python-Levenshtein
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
@@ -35,4 +35,7 @@ jupyter_hooks = True
 clean_ids = True
 clear_all = False
 console_scripts = finsets_search=finsets:search
+cell_number = True
+update_pyproject = True
+skip_procs = 
 
