--- a/settings.ini
+++ b/settings.ini
@@ -20,7 +20,7 @@ git_url = https://github.com/ionmihai/finsets
 title = finsets
 audience = Developers
 author = Mihai Ion
-author_email = mihaiion@email.arizona.edu
+author_email = ionmihaib@gmail.com
 copyright = 2023 onwards, Mihai Ion
 description = Download and process datasets commonly used in finance research
 keywords = nbdev jupyter notebook python
